# sono

./: .gitignore  LICENSE  README.md
sono-system/: .editorconfig  pyproject.toml  requirements.txt
sono-system/chat/: main.py
sono-ui/: .eslintrc.cjs  package.json  tsconfig.json
sono-ui/src/: main.tsx
sono-ui/src/app/: AppProvider.tsx  config.tsx  index.tsx
sono-ui/src/views/modules/home/: index.tsx
sono-ui/src/views/pages/home/: index.tsx
