[tool.poetry]
name = "sono-system"
version = "0.1.0"
description = "Sono, chat system"
authors = ["San Dang <dangthaisan@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sono_system"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.98.0"
uvicorn = {extras = ["standard"], version = "0.22.0"}
websockets = "11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
